# nautilus_stack

./: .gitignore  .gitmodules  .travis.yml  README.md  dependencies.rosinstall  license.txt  stack.xml
docs/: 404.html  docusaurus.config.js  index.html  package.json  sidebars.js  sitemap.xml
docs/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.js  registry.js  routes.js  routesChunkNames.json
docs/.docusaurus/docusaurus-plugin-content-blog/: nautilus-docs-blog-524.json  nautilus-docs-blog-tags-docusaurus-60b.json  nautilus-docs-blog-tags-facebook-b01.json  nautilus-docs-blog-tags-hello-af9.json  nautilus-docs-blog-tags-hola-b00.json  nautilus-docs-blog-tags-tags-daf.json  site-blog-2019-05-28-hola-md-bdd.json  site-blog-2019-05-29-hello-world-md-d61.json  site-blog-2019-05-30-welcome-md-286.json
docs/.docusaurus/docusaurus-plugin-content-docs/: nautilus-docs-docs-route-707.json  site-docs-config-params-mdx-cc0.json  site-docs-getting-started-md-92b.json  site-docs-install-nautilus-md-5a8.json  site-docs-run-nautilus-mdx-d4f.json  site-docs-running-example-bags-mdx-a8c.json  site-docs-vectorize-mdx-e56.json  site-docs-write-config-mdx-3e5.json
docs/blog/: index.html
docs/blog/hello-world/: index.html
docs/blog/hola/: index.html
docs/blog/tags/: index.html
docs/blog/welcome/: index.html
docs/docs/: config_params.mdx  getting_started.md  install_nautilus.md  run_nautilus.mdx  running_example_bags.mdx  vectorize.mdx  write_config.mdx
docs/src/pages/: index.js
docs/website/: siteConfig.js
laser_scan_matcher/: CMakeLists.txt  package.xml
laser_scan_matcher/models/: model_conv_16.pth  model_conv_44.pth
laser_scan_matcher/scripts/: config.py  match_laser_scans.py  model.py
laser_scan_matcher/src/laser_scan_matcher/: laser_scan_matcher.py
laser_scan_matcher/srv/: MatchLaserScans.srv
launch/: run_cmu_cobot.launch  run_ft_test.launch  run_jackal_2020.launch  run_lgrc.launch  run_stack.launch  run_ut_automata.launch
learning-loop-closure/: .gitignore  README.md  config.py  helpers.py  loop_closure_timestamps.data  plot_results.py  train.py  train_distance.py  train_laser.py  train_lcc.py  train_local_uncertainty.py  train_structured.py
learning-loop-closure/data_processing/: create_lcc_dataset.py  create_recall_datasets.py  create_training_data.py  data_processing_helpers.py  dataset.py  generate_lcc_dataset.py  test_helpers.py
learning-loop-closure/evaluation/: evaluate_embedder_classification.py  evaluate_matcher_classification.py  evaluate_recall.py  evaluate_recall_interactive.py  evaluate_structured_classification.py  evaluate_top_k.py  evaluation_helpers.py  generate_manual_evaluation_set.py  generate_uniqueness_scores.py  results.md  visualize_cloud.py  visualize_labeled_timestamps.py  visualize_lc_trajectory.py  visualize_learned_transforms.py  visualize_local_uncertainty.py  visualize_localization.py  visualize_recall_dataset.py  visualize_triplets.py
learning-loop-closure/evaluation/manual_evaluation_GDC1/: dataset_info.json
learning-loop-closure/laser_scan_matcher/: CMakeLists.txt  manifest.xml
learning-loop-closure/local_uncertainty_estimator/: CMakeLists.txt  package.xml
learning-loop-closure/local_uncertainty_estimator/src/local_uncertainty_estimator/: local_uncertainty_estimator.py
learning-loop-closure/ltf_segmentation/: ltf_dataset.py  ltf_helpers.py  ltf_model.py  train_ltf.py  visualize_ltf.py
learning-loop-closure/point_cloud_embedder/: CMakeLists.txt  manifest.xml
local_uncertainty_estimator/: CMakeLists.txt  Makefile  manifest.xml  package.xml
local_uncertainty_estimator/models/: model_conv_44.pth
local_uncertainty_estimator/scripts/: estimate_local_uncertainty.py
local_uncertainty_estimator/srv/: EstimateLocalUncertainty.srv
log/: latest
(+16 files in other folders)
