<package>
  <version>1.0.0</version>
  <description>
    PyTorch network for predicting local uncertainty in a given laser scan
  </description>
  <name>local_uncertainty_estimator</name>
  <maintainer email="kvsikand@utexas.edu">Kavan Sikand</maintainer>
  <author>Kavan Sikand</author>
  <license>MIT</license>
  <url></url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>


