<package>
  <name>local_uncertainty_estimator</name>
  <version>0.0.1</version>
  <description>
    A network to describe the uncertainty surrounding a scan.
  </description>
  <maintainer email="kvsikand@utexas.edu">Kavan Sikand</maintainer>
  <license>N/A</license>

  <url>N/A</url>
  <author email="kvsikand@utexas.edu">Kavan Sikand</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roslib</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>

